Implementacion de slugs para manejo de url y actualizacion de swagger
